// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R1 — the phone is unchanged (golden) contacts add sheet (header Plus), iOS 390 1`] = `
{
  "lines": 506,
  "sha256": "c60ebde660cc4d2c594aaaafccff221af1638a2851560b1c0c2d0d5365c48c1d",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, iOS 390 1`] = `
{
  "lines": 506,
  "sha256": "ebd6489c4ca3dde657c9483e3460d9be1d24bcdb11b3781a2154730afe1eb0ca",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 390 1`] = `
{
  "lines": 506,
  "sha256": "ebd6489c4ca3dde657c9483e3460d9be1d24bcdb11b3781a2154730afe1eb0ca",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 768 1`] = `
{
  "lines": 506,
  "sha256": "ebd6489c4ca3dde657c9483e3460d9be1d24bcdb11b3781a2154730afe1eb0ca",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts detail open, iOS 390 1`] = `
{
  "lines": 601,
  "sha256": "3ea4f4b7fd08b4e6297b7360f802d9dc961f1ee935e213333d94f5f1d63b289f",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew add sheet (add-crew-member), iOS 390 1`] = `
{
  "lines": 427,
  "sha256": "7323624fd92410e433684d0b8fdc77b5c7439cfbb55becab4a3a3302224746ef",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, iOS 390 1`] = `
{
  "lines": 427,
  "sha256": "3057069977989ef43aae2f5036dbaafed7564f9444f0f6853781a835d77d3058",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 390 1`] = `
{
  "lines": 427,
  "sha256": "3057069977989ef43aae2f5036dbaafed7564f9444f0f6853781a835d77d3058",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 768 1`] = `
{
  "lines": 427,
  "sha256": "3057069977989ef43aae2f5036dbaafed7564f9444f0f6853781a835d77d3058",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew detail open, iOS 390 1`] = `
{
  "lines": 526,
  "sha256": "436fd350cf85a934df488f7022f7770c50e18773ce7121407c8254771f420d8f",
}
`;
